--- a/src/main/webapp/app/entities/participant/participant-create.component.html
+++ b/src/main/webapp/app/entities/participant/participant-create.component.html
@@ -39,7 +39,7 @@
                                         </div>
                                         <div [hidden]="!((birthDate?.dirty || birthDate?.touched) && birthDate?.invalid)">
                                             <small class="form-text text-danger"
-                                                   [hidden]="!birthdate?.errors?.max">
+                                                   [hidden]="!birthDate?.errors?.max">
                                                 La fecha es inválida.
                                             </small>
                                         </div>
