--- a/src/main/webapp/app/entities/participant/participant-update.component.html
+++ b/src/main/webapp/app/entities/participant/participant-update.component.html
@@ -19,8 +19,9 @@
                                         <label _ngcontent-c5="" for="field_birthdate">Fecha de nacimiento</label>
                                         <div class="input-group">
                                             <input _ngcontent-c5="" class="form-control"
-                                                   id="field_birthdate" name="birthdate" type="text" ngbDatepicker
-                                                   #birthdateDp="ngbDatepicker" [(ngModel)]="participant.birthdate" disabled>
+                                                   id="field_birthdate" name="birthdateDp" type="text" ngbDatepicker
+                                                   #birthdateDp="ngbDatepicker" [(ngModel)]="participant.birthdate"
+                                                   disabled #birthDate="ngModel">
                                             <span class="input-group-append">
                                                 <button type="button" class="btn btn-secondary"
                                                         (click)="birthdateDp.toggle()">
