--- a/src/main/webapp/app/entities/test-question/test-question-update.component.html
+++ b/src/main/webapp/app/entities/test-question/test-question-update.component.html
@@ -23,7 +23,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-9 col-9 col-md-9 col-lg-9">
-                            <input #floatAnswer="ngModel" type="text" class="form-control" name="answer{{i}}"
+                            <input #floatAnswer="ngModel" type="text" class="form-control"
                                    id="newAnswer" [class.ng-invalid]="repeatedNewAnswer()"
                                    [(ngModel)]="newAnswer.answer"/>
                             <small class="form-text text-muted danger" *ngIf="!floatAnswer.valid && (floatAnswer.dirty ||
@@ -66,12 +66,12 @@
                 <div>
                     <h4 class="form-section"><i class="ft-info"></i>Información de las respuestas</h4>
                 </div>
-                <div class="form-group" *ngFor="let answer of testQuestion.answers; let i = index">
+                <div class="form-group" *ngFor="let answer of testQuestion.answers; let ind = index">
                     <div *ngIf="answer.answer !== 'delete'">
                         <label class="form-control-label" for="field_answer{{answer.id}}">Respuesta</label>
                         <div class="row">
                             <div class="col-sm-9 col-9 col-md-9 col-lg-9">
-                                <input type="text" class="form-control" name="answer{{i}}"
+                                <input type="text" class="form-control" name="answer{{ind}}"
                                        id="field_answer{{answer.id}}"
                                        [(ngModel)]="answer.answer"/>
                                 <small class="form-text text-muted danger" *ngIf="!answer.answer">
