Added bans verification logic

--- a/src/main/resources/templates/mail/paymentEmail.html
+++ b/src/main/resources/templates/mail/paymentEmail.html
@@ -486,7 +486,7 @@
 
                             <div style="Margin-left: 20px;Margin-right: 20px;">
                                 <div style="mso-line-height-rule: exactly;mso-text-raise: 4px;">
-                                    <p th:text="#{email.payment.text1}" class="size-16" style="Margin-top: 0;color: black;Margin-bottom: 20px;font-size: 16px;line-height: 24px;text-align: center;" lang="x-size-16">Su transacci&#243;n ha sido completada de manera exitosa.</p>
+                                    <p th:text="#{email.payment.text1(${amount})}" class="size-16" style="Margin-top: 0;color: black;Margin-bottom: 20px;font-size: 16px;line-height: 24px;text-align: center;" lang="x-size-16">Su transacci&#243;n ha sido completada de manera exitosa.</p>
                                 </div>
                             </div>
 
