MPV-16 pending testing

--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -216,7 +216,7 @@
                                                 <div _ngcontent-c24="" class="custom-control custom-radio">
                                                     <input type="radio" id="customRadioInline2" value="participant"
                                                            name="customRadioInline1" class="custom-control-input"
-                                                           (change)="setRole('participant')">
+                                                           (change)="setRole('participant')" checked>
                                                     <label class="custom-control-label"
                                                            for="customRadioInline2">Participante</label>
                                                 </div>
