--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -20,6 +20,13 @@ Navbar
     width: 1.75em;
 }
 
+.finish-him {
+    height: 250px;
+    float: left;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
 /* ==========================================================================
 Logo styles
 ========================================================================== */
